Fix cursor flicker on transition from normal to hover.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -44,6 +44,7 @@ p3{
 a{
     color:#5c80bc;
     text-decoration: none;
+    cursor: url("/images/cursor_norm.png"),auto;
 }
 a:hover{
     -webkit-transition: all 1s ease;
